--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:protectionLevel="signature" />
 
     <application
-        android:name="com.sales.tandt.controller.AppController"
+        android:name=".controller.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -37,7 +37,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.sales.tandt.activity.MainActivity"
+            android:name=".activity.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -55,7 +55,7 @@
                 android:value=".activity.MainActivity" />
         </activity>
         <activity
-            android:name="com.sales.tandt.activity.GenerateInvoiceActivity"
+            android:name=".activity.GenerateInvoiceActivity"
             android:theme="@style/NoTitleBarTheme"
             android:screenOrientation="portrait"
             android:parentActivityName=".activity.MainActivity">
@@ -64,7 +64,7 @@
                 android:value=".activity.MainActivity" />
         </activity>
         <activity
-            android:name="com.sales.tandt.activity.FoodMenuListActivity"
+            android:name=".activity.FoodMenuListActivity"
             android:theme="@style/NoTitleBarTheme"
             android:screenOrientation="portrait"
             android:parentActivityName=".activity.MainActivity">
